--- a/employee-service.properties
+++ b/employee-service.properties
@@ -1,4 +1,4 @@
-spring.application.name=EMPLOYEE-SERVICE
+#spring.application.name=EMPLOYEE-SERVICE
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_employee_db
 spring.datasource.username=root
