--- a/department-service.properties
+++ b/department-service.properties
@@ -1,4 +1,4 @@
-spring.application.name=department-service
+#spring.application.name=department-service
 
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_department_db
 spring.datasource.username=root
