--- a/employee-service.properties
+++ b/employee-service.properties
@@ -11,3 +11,5 @@ server.port=8081
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
+
+spring.boot.message=Hello, Employee Service
