--- a/employee-service.properties
+++ b/employee-service.properties
@@ -12,4 +12,4 @@ eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.hostname=localhost
 eureka.instance.prefer-ip-address=true
 
-spring.boot.message=Hello, Employee Service
+spring.boot.message=Hello, Employee Service Spring Cloud Bus Demo
