--- a/organization-service.properties
+++ b/organization-service.properties
@@ -3,9 +3,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/ms_organization_db
 spring.datasource.username=root
 spring.datasource.password=root
-
 spring.jpa.hibernate.ddl-auto=update
-#server.port=8083
+
+server.port=8083
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
 #eureka.instance.hostname=localhost
