--- a/organization-service.properties
+++ b/organization-service.properties
@@ -8,7 +8,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8083
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
-#eureka.instance.hostname=localhost
+eureka.instance.hostname=localhost
 #eureka.instance.prefer-ip-address=true
 
 spring.boot.message=Hello, Organization Service Update Spring Cloud Bus Demo
